<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/winter_portrait"
    tools:context=".screens.detail.DetailFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/choose_place"
        android:src="@drawable/ic_baseline_place_24"
        tools:ignore="RtlHardcoded" />

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/weather_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/weather_city"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/data"
                android:textColor="@color/blue_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="8dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textColor="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/humidity"
                        android:textColor="@color/orange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/pressure"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind"
                        android:textColor="@color/blue_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind_gust"
                        android:textColor="@color/red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/sea_level"
                        android:textColor="@color/orange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temperature_min"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temperature_max"
                        android:textColor="@color/blue_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fase_of_moon"
                        android:textColor="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:background="@color/purple_700" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tv_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/humidity"
                        android:textColor="@color/orange" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/pressure"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/tv_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind"
                        android:textColor="@color/blue_1" />

                    <TextView
                        android:id="@+id/tv_wind_gust"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wind_gust"
                        android:textColor="@color/red" />

                    <TextView
                        android:id="@+id/tv_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/tv_sea_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/sea_level"
                        android:textColor="@color/orange" />

                    <TextView
                        android:id="@+id/tv_temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temperature_min"
                        android:textColor="@color/green" />

                    <TextView
                        android:id="@+id/tv_temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/temperature_max"
                        android:textColor="@color/blue_1" />

                    <TextView
                        android:id="@+id/day_of_moon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/fase_of_moon"
                        android:textColor="@color/black" />

                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="15dp"
                        app:cardCornerRadius="20dp">

                        <ImageView
                            android:id="@+id/image_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/icon"
                            tools:src="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>

                    <FrameLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/wind_degri_circle">

                        <ImageView
                            android:id="@+id/image_wind"
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/icon"
                            android:rotation="137"
                            app:srcCompat="@drawable/wind_arrow" />
                    </FrameLayout>
                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal|bottom"
                        app:cardCornerRadius="20dp"
                        android:elevation="10dp"
                        >
                        <ImageView
                            android:id="@+id/image_moon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/black"
                            tools:src="@tools:sample/avatars"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/icon" />
                    </androidx.cardview.widget.CardView>

                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp" />
            <ImageButton
                android:id="@+id/btn_5days"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom|center_horizontal"
                android:contentDescription="@string/detail"
                android:elevation="20dp"
                android:scaleType="centerCrop"
                android:backgroundTint="@color/red"
                app:srcCompat="@drawable/weather_detail" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>