<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="20dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:gravity="end"
        android:text="@string/data"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/blue_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:layout_marginTop="8dp"
                android:textColor="@color/green"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_gust"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/purple_700"
            android:layout_marginStart="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_temperature"
                android:text="@string/temperature"
                android:textColor="@color/blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_humidity"
                android:text="@string/humidity"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_pressure"
                android:text="@string/pressure"
                android:layout_marginTop="8dp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_wind"
                android:text="@string/wind"
                android:layout_marginTop="8dp"
                android:textColor="@color/blue_1"/>
            <TextView
                android:id="@+id/tv_wind_gust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_gust"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"/>

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:background="@drawable/wind_degri_circle">

        <ImageView
            android:id="@+id/image_wind_item"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"
            android:rotation="137"
            app:srcCompat="@drawable/wind_arrow" />
    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        >
        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:src="@tools:sample/avatars"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/icon" />
    </androidx.cardview.widget.CardView>


</FrameLayout>

</LinearLayout>
    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>