<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.start.StartFragment"
    android:background="@drawable/spring_portrait"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/choose_place"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/blue"/>

        <TextView
        android:id="@+id/tv_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/orange"
        tools:text="@string/weather_city"
        android:layout_weight="1"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/choose_place"
            android:src="@drawable/ic_baseline_place_24"
            tools:ignore="RtlHardcoded"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/orange"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/blue_1"
            android:text="@string/latitude"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_lon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/blue_1"
            android:text="@string/longitude"
            android:layout_weight="1"
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>